--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_view_pantry_items">Add to Pantry</string>
     <item name="Uninstall" type="id" />
     <string name="title_activity_update_pantry">Modify Inventory</string>
+    <string name="barcode">Barcode</string>
 </resources>
