--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="login_with_twitter">Login with Twitter</string>
     <string name="login_with_password">Login with Password</string>
     <string name="login_anonymously">Login Anonymously</string>
+    <string name="title_activity_single_place">SinglePlaceActivity</string>
 </resources>
