Aparna-Preferred location integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="notes">Notes</string>
     <string name="maps">Maps</string>
     <string name="recipe">Recipe</string>
+    <string name="title_activity_pref_store">PrefStoreActivity</string>
 </resources>
