History Added to tabs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="notes">Notes</string>
     <string name="maps">Maps</string>
     <string name="recipe">Recipe</string>
+    <string name="history">History</string>
 </resources>
