--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="maps">Maps</string>
     <string name="recipe">Recipe</string>
     <string name="history">History</string>
+    <string name="title_activity_pref_store">Prefered Store</string>
 </resources>
